Add  UI for change and vision Player Health
Added 2 button for change Player Health. Added 2 sliders (1 smooth) and 1 Text for vision Player Health

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "PlatformerHW.sln"
+    "dotnet.defaultSolution": "PlatformerHW.sln",
+    "dotnet.debug.suppressInvalidDebugTypeWarning": true
 }
